[package]
name = "ssle-vanity-identity"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ec = { version = "0.3.0", default-features = false, features = ["parallel"] }
ark-ff = { version = "0.3.0", default-features = false, features = ["parallel", "asm"] }
ark-std = { version = "0.3.0", default-features = false, features = ["parallel"] }
ark-bls12-381 = { version = "0.3.0", default-features = false, features = ["curve"] }
rand = "0.8.4"

criterion = { version = "0.3.5", features = ["html_reports"] }

[[bench]]
name = "perf"
harness = false
